HomePage completed and Basket added with context API

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,2 +1,8 @@
 @import "./base/base";
+@import "./base/typorgraphy";
+
+@import "./component/checkout";
 @import "./component/header";
+@import "./component/home";
+@import "./component/product";
+@import "./component/subtotal";
