--- a/src/styles/component/_header.scss
+++ b/src/styles/component/_header.scss
@@ -32,7 +32,6 @@
     padding: 0.5rem;
     width: 4rem !important;
     height: 3.2rem !important;
-    // font-size: 4rem !important;
     background-color: #cd9042;
   }
 
@@ -48,11 +47,11 @@
     margin: 0 2rem;
 
     &--LineOne {
-      font-size: 1.6rem;
+      // font-size: 1.6rem;
     }
 
     &--LineTwo {
-      font-size: 2rem;
+      // font-size: 2rem;
       font-weight: 800;
     }
 
