--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,7 +2,9 @@
 @import "./base/typorgraphy";
 
 @import "./component/checkout";
+@import "./component/checkoutProduct";
 @import "./component/header";
 @import "./component/home";
+@import "./component/login";
 @import "./component/product";
 @import "./component/subtotal";
