Payment page added && Stripe dependencies added, Integration left

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,5 +6,6 @@
 @import "./component/header";
 @import "./component/home";
 @import "./component/login";
+@import "./component/payment";
 @import "./component/product";
 @import "./component/subtotal";
